# simhospital

./: BUILD.bazel  WORKSPACE  cloudbuild.yaml
configs/pathways/: sample_pathways.yml
pkg/files/: BUILD.bazel  files.go
pkg/message/: messages.go
pkg/pathway/: BUILD.bazel  parser.go
